--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label for="nome">Nome</label>
             <input type="text" id="nome" required placeholder="digite seu nome">
             <label for="numero">Número do telefone</label>
-            <input type="number" id="numero" required placeholder="digite seu número" > 
+            <input type="tel" id="numero" required placeholder="digite seu número" > 
             <button type="submit" id="button" >Cadastrar</button>
         </form>
     </div>
